@@ -1,3 +1,6 @@
+21.jan (mi)
+      - Time signature layout was wrong in staves with non-standard line number or
+        spacing (mostly tablature staves) (r. 3937)
 20.jan (mi)
       - support for 'upside down' tablatures (lowest string on top) (r. 3929)
       - Score::putNote() (edit.cpp): do not accept a new note on a tablature
